minik8s/movie-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieinfosite
spec:
  selector:
    matchLabels:
      app: movieinfosite
  template:
    metadata:
      labels:
        app: movieinfosite
    spec:
      containers:
      - name: movieinfosite
        image: prashant99/movieinfosite:v1.2
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 3000
