minik8s/movie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movieinfosite
spec:
  type: LoadBalancer
  selector:
    app: movieinfosite
  ports:
  - port: 80
    targetPort: 3000
