minik8s/movie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movieinfosite
  labels:
    name: movieinfosite
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: movieinfosite.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: movieinfosite
            port:
              number: 80
